# oatmeal-raisin

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json
{{cookiecutter.project-slug}}/: pyproject.toml  tox.ini
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  pyproject.toml  tox.ini
{{cookiecutter.project_name}}/.github/workflows/: test.yml
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  pyproject.toml  tox.ini
